Sonar issues : Fixed